@@ -260,7 +260,6 @@ GtkWidget *discard_build_page(void)
 							  NULL);
 	gtk_tree_view_column_set_sizing(column,
 					GTK_TREE_VIEW_COLUMN_GROW_ONLY);
-	set_pixbuf_tree_view_column_autogrow(discard_widget, column);
 	gtk_tree_view_append_column(GTK_TREE_VIEW(discard_widget), column);
 
 	column = gtk_tree_view_column_new_with_attributes("",
