@@ -242,7 +242,6 @@ GtkWidget *gold_build_page(void)
 							  NULL);
 	gtk_tree_view_column_set_sizing(column,
 					GTK_TREE_VIEW_COLUMN_GROW_ONLY);
-	set_pixbuf_tree_view_column_autogrow(gold_widget, column);
 	gtk_tree_view_append_column(GTK_TREE_VIEW(gold_widget), column);
 
 	column = gtk_tree_view_column_new_with_attributes("",
